--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
         </div>
     </div>
+    <footer>
+        <div>
+            <p>Este Es el footer de mi pagina</p>
+        </div>
+    </footer>
 </body>
-
 </html>
