--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
-            <div>div para joder</div>
+            <div>div para joder xd</div>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
