--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">
+        <div class="cabecera">
+            <img class="image-logo"src="./images/Bitcoin.png" alt="logo">
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
-            <div>div para molestar xd</div>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
