--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <footer>
         <div>
-            <p>Este Es el footerxd de mi pagina</p>
+            <p>Nuevo footer :3 </p>
         </div>
     </footer>
 </body>
